# abcg

./: .gitignore
.github/workflows/: static.yml
examples/: CMakeLists.txt
examples/asteroids1/: CMakeLists.txt  window.cpp  window.hpp
examples/asteroids2/: CMakeLists.txt  starlayers.cpp  window.cpp  window.hpp
examples/asteroids3/: CMakeLists.txt  window.cpp  window.hpp
examples/coloredtriangles/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
examples/firstapp/: main.cpp  window.cpp  window.hpp
examples/project1/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
examples/regularpolygons/: main.cpp
public/: project1.html  project1.wasm
web-app/: project1.js
