#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(tictactoe)
#add_subdirectory(sierpinski)
##add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids1)
#add_subdirectory(asteroids2)
#add_subdirectory(asteroids3)
#add_subdirectory(asteroids4)
add_subdirectory(project1)